[tool.poetry]
name = "hivemind"
version = "0.1.0"
description = ""
authors = ["Michael Dombek <michael@cargobay.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
